--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <meta charset="utf-8" />
+    <title>CarCHIP</title>
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="css/screen.css" />
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using node <script>document.write(process.versions.node)</script>,
-    Chrome <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+    <div class="row">
+      <div class="clock">
+        22:22
+      </div>
+    </div>
+    <div class="row">
+      <div class="btn blue"><i class="fa fa-bluetooth-b fa-3x"></i></div>
+      <div class="btn orange"><i class="fa fa-circle-o fa-3x"></i></div>
+      <div class="btn red"><i class="fa fa-podcast fa-3x"></i></div>
+      <div class="btn green"><i class="fa fa-car fa-3x"></i></div>
+    </div>
+    <div class="row">
+      <div class="btn yellow"><i class="fa fa-map fa-3x"></i></div>
+      <div class="btn purple"><i class="fa fa-thermometer-half fa-3x"></i></div>
+      <div class="btn grey"><i class="fa fa-sliders fa-3x"></i></div>
+      <div class="btn lblue"><i class="fa fa-info-circle fa-3x"></i></div>
+    </div>
   </body>
 </html>
